--- a/.gitignore
+++ b/.gitignore
@@ -4709,3 +4709,12 @@
 .tmp.driveupload/41151
 .tmp.driveupload/41153
 .tmp.driveupload/59793
+.tmp.driveupload/26407
+.tmp.driveupload/26413
+.tmp.driveupload/26421
+.tmp.driveupload/26427
+.tmp.driveupload/59795
+.tmp.driveupload/59797
+.tmp.driveupload/59799
+.tmp.driveupload/59801
+.tmp.driveupload/59803
